--- a/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -5,7 +5,7 @@
 }
 .container {
     display: flex;
-    width: var(--defaylt-layout-with);
+    width: var(--default-layout-with);
     min-height: 1000px;
 }
 .content {
