--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -12,7 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: var(--defaylt-layout-with);
+    width: var(--default-layout-with);
     height: 100%;
 }
 ///.logo {
@@ -86,4 +86,9 @@
     font-size: 1.4rem;
     font-weight: 600;
     color: rgba(22, 24, 35, 0.5);
+}
+.more-button {
+    margin-left: 24px;
+    background: transparent;
+    font-size: 2rem;
 }
