--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -3,4 +3,5 @@
     min-height: 100px;
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
     background-color: rgb(255 255 255);
+    padding: 8px 0px;
 }
